fix(footer) wrap with .container

--- a/src/styles/bulma/extensions/index.sass
+++ b/src/styles/bulma/extensions/index.sass
@@ -6,3 +6,13 @@
 
 .is-round
 	border-radius: 100%
+
+// copied from bulma base/generic a tag styles
+.is-link
+	color: $link
+	cursor: pointer
+	text-decoration: none
+	strong
+		color: currentColor
+	&:hover
+		color: $link-hover
